feat(index): add header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <section>
-        <!-- Bright -->
-        <h1>SS</h1>
+        <h1>ssss</h1>
+        <p>ss</p>
     </section>
 
     <section>
