--- a/index.html
+++ b/index.html
@@ -4,25 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>My Landing Page</title>
 </head>
 
 <body>
+    <header>
+        <div class="navbar">
 
-    <section>
-        <h1>ssss</h1>
-        <p>ss</p>
-    </section>
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </div>
+    </header>
 
-    <section>
-        <!-- Im -->
-    </section>
+    <main>
+        <h1 class="welcome">Welcome to Our Landing Page</h1>
+        <div class="container">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere a elit vel tristique. Sed
+                euismod
+                feugiat justo, nec blandit eros cursus a. Nulla facilisi. Sed sit amet est a libero volutpat venenatis.
+                Sed
+                sit amet velit sit amet orci tempus tincidunt. In non risus ut ipsum scelerisque dictum. Sed viverra
+                lectus
+                et lacus hendrerit, in vehicula odio ultrices. Fusce in feugiat purus. Donec posuere sapien a bibendum
+                bibendum. Vivamus rhoncus, justo at feugiat auctor, sapien neque consequat nunc, at eleifend velit purus
+                non
+                nisl. Nulla facilisi. In hac habitasse platea dictumst.</p>
+            <h2>Our Services</h2>
+            <ul class="service">
 
-    <section>
-        <!-- Peat -->
-    </section>
+                <li class="service-item"></li>
+                <li class="service-item"></li>
+                <li class="service-item"></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore aspernatur nihil accusamus quos
+                blanditiis. Nulla, natus. In deserunt quidem laboriosam alias voluptatibus, rerum dolorem facilis
+                numquam
+                sint eius repellendus inventore. Beatae voluptate ab, placeat qui aspernatur velit expedita error?
+                Deserunt
+                voluptatibus reprehenderit, a qui molestias exercitationem, repellendus sunt tempore natus esse rem
+                consectetur facilis nam nemo ducimus. Optio exercitationem veritatis quasi aliquam voluptate repudiandae
+                dignissimos itaque recusandae eos dolore eum minus perspiciatis laborum corrupti expedita maxime hic
+                quidem,
+                perferendis aut a nam ipsa. Vel natus nobis nesciunt molestias adipisci, maxime optio magnam. Dolor
+                officia
+                reprehenderit vitae. Suscipit, quidem asperiores.</p>
+            <h2>Contact Us</h2>
+            <p>If you have any questions or would like to get in touch, please don't hesitate to contact us.</p>
+            <p>Email: info@example.com</p>
+            <p>Phone: (123) 456-7890</p>
+        </div>
+    </main>
 
+    <footer>
+        &copy; 2023 My Landing Page. All rights reserved.
+    </footer>
 
 </body>
 
