--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     </main>
 
     <section>
-        <!-- Im -->
+        <footer>
+            &copy; 2023 My Landing Page. All rights reserved.
+        </footer>
     </section>
 
     <section>
