--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section>
         <footer>
-            &copy; 2023 My Landing Page. All rights reserved.
+            &copy; 2023 My Landing Page. All rights reserved by TechUp Thailand 
         </footer>
     </section>
 
